replace future deprecation warnings (#68)